--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,7 +1,6 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
+  font-size: 1.5em;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
     Helvetica Neue, sans-serif;
 }
